test/Fail/QuoteLiteral.err
QuoteLiteral.agda:7.5-13: error: [CannotQuote.Expression]
'quote' expects an unambiguous defined name,
but here the argument is a literal: 42
when checking that the expression quote 42 has type Name
